server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-12.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'Immathalle' should get '0501.EG.136' in 1 results"
---
- facet: rooms
  entries:
    - id: 0501.EG.130C
      type: room
      name: "0501.EG.130C (Küche \u0019Immatrikulationshalle\u0017)"
      subtext: "stammgelände, Institutsbau"
      subtext_bold: 0130C@0501
    - id: 0501.EG.136
      type: room
      name: "0501.EG.136 (\u0019Immatrikulationshalle\u0017)"
      subtext: "stammgelände, Institutsbau"
      subtext_bold: 0136@0501
    - id: 0501.EG.140
      type: room
      name: "0501.EG.140 (Durchgangshalle zur \u0019Immathalle\u0017)"
      subtext: "stammgelände, Institutsbau"
      subtext_bold: 0140@0501
  n_visible: 3
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
