server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-13.snap
---
source: server/src/search_executor/mod.rs
description: Copy/paste from real search
expression: actual
info: "'Augustenstraße 44; Raum 209; 2.OG' should get '2903.02.209' in 1 results # Copy/paste from real search"
---
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
