server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-16.snap
---
source: server/src/search_executor/mod.rs
description: "typo + it's 'Fachschaftsbüro' in the data"
expression: actual
info: "'fachschaft pyhsik' should get '5101.EG.257' in 1 results # typo + it's 'Fachschaftsbüro' in the data"
---
- facet: rooms
  entries:
    - kind: location
      id: 0104.EG.413
      type: room
      name: "0104.EG.413 (Elektroniklabor \u0019Fachschaft\u0017 EI)"
      subtext: "stammgelände, N4"
      subtext_bold: N0413@0104
    - kind: location
      id: 5101.EG.257
      type: room
      name: "5101.EG.257 (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Physik I"
      subtext_bold: 2257@5101
    - kind: location
      id: 5606.EG.037
      type: room
      name: "5606.EG.037 (Besprechungsraum \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.037@5606
    - kind: location
      id: 5606.EG.036
      type: room
      name: "5606.EG.036 (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.036@5606
    - kind: location
      id: 5406.01.650C
      type: room
      name: "5406.01.650C (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Chemie"
      subtext_bold: 26503@5406
    - kind: location
      id: 5606.EG.038
      type: room
      name: "5606.EG.038 (Lager \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.038@5606
    - kind: location
      id: 5606.EG.039
      type: room
      name: "5606.EG.039 (Skriptenverkauf \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.039@5606
    - kind: location
      id: 2333.01.103
      type: room
      name: "2333.01.103 (\u0019Fachschaft\u0017 Sport Stud. Arbeitplätze)"
      subtext: "sz, CiO/SG Hallen Ost"
      subtext_bold: 01.2333.103@2333
    - kind: location
      id: 9377.01.130
      type: room
      name: "9377.01.130 (Projektraum \u0019Fachschaft\u0017)"
      subtext: "taufkirchen-ottobr., Lise-Meitner-Straße 9-11"
      subtext_bold: 01.130@9377
    - kind: location
      id: 0504.EG.424
      type: room
      name: "0504.EG.424 (Arbeitsraum/Studenten/\u0019Fachschaft\u0017)"
      subtext: "stammgelände, Z4"
      subtext_bold: 0424@0504
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
