server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-19.snap
---
source: server/src/search_executor/mod.rs
description: "H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
expression: actual
info: "'H.03' should get '2910.EG.003' in 1 results # H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
---
- facet: rooms
  entries:
    - kind: location
      id: 5212.01.030
      type: room
      name: "5212.01.\u001903\u00170 (Gemeinschaftsraum)"
      subtext: "garching, RCM-Hauptbau"
      subtext_bold: H.1.030@5212
    - kind: location
      id: 5212.02.030
      type: room
      name: "5212.02.\u001903\u00170 (Gemeinschaftsraum)"
      subtext: "garching, RCM-Hauptbau"
      subtext_bold: H.2.030@5212
    - kind: location
      id: 2910.EG.031
      type: room
      name: "2910.EG.\u001903\u00171 (WC-Herren)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.031@2910
      parsed_id: "\u0019H.03\u00171 RiWa 1 (HfP/GOV)"
    - kind: location
      id: 2910.EG.032
      type: room
      name: "2910.EG.\u001903\u00172 (WC-Barrierefrei)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.032@2910
      parsed_id: "\u0019H.03\u00172 RiWa 1 (HfP/GOV)"
    - kind: location
      id: 0205.03.311
      type: room
      name: "0205.\u001903\u0017.311 (WC-\u0019H\u0017)"
      subtext: "stammgelände, S5"
      subtext_bold: 3311@0205
    - kind: location
      id: 0205.03.311A
      type: room
      name: "0205.\u001903\u0017.311A (Vorraum WC-\u0019H\u0017)"
      subtext: "stammgelände, S5"
      subtext_bold: 3311A@0205
    - kind: location
      id: 2910.03.301
      type: room
      name: "2910.\u001903\u0017.301 (Büro)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.301@2910
    - kind: location
      id: 2910.03.302
      type: room
      name: "2910.\u001903\u0017.302 (Büro)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.302@2910
    - kind: location
      id: 2910.03.303
      type: room
      name: "2910.\u001903\u0017.303 (Büro)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.303@2910
    - kind: location
      id: 2910.03.304
      type: room
      name: "2910.\u001903\u0017.304 (Büro)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.304@2910
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
