server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-2.snap
---
source: server/src/search_executor/mod.rs
description: target is hallucinated as it currently does not exist
expression: actual
info: "'tb innenstadt' should get 'tb-arcisstraße' in 1 results # target is hallucinated as it currently does not exist"
---
- facet: buildings
  entries:
    - kind: location
      id: "2334"
      type: building
      name: "CiO/SG Institute West, \u0019Bibliothek\u0017"
      subtext: Gebäude
    - kind: location
      id: "5510"
      type: building
      name: "Hörsaal, \u0019Bibliothek\u0017 u. Verwaltungsgebäude"
      subtext: Gebäudeteil
    - kind: location
      id: "4220"
      type: building
      name: "\u0019Teilbibliothek\u0017 Weihenstephan, Pressestelle Datenverarbeitung"
      subtext: Gebäude
    - kind: location
      id: "5401"
      type: building
      name: "\u0019Teilbibliothek\u0017 Chemie, Hörsaal (CH1, dunkelgrün)"
      subtext: Gebäudeteil
    - kind: location
      id: "5603"
      type: building
      name: "\u0019Bibliothek\u0017"
      subtext: Gebäudeteil
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries:
    - kind: location
      id: 5401.01.101K
      type: room
      name: 5401.01.101K (Hans-Fischer-Hörsaal)
      subtext: "garching, Chemie"
      subtext_bold: 21010@5401
    - kind: location
      id: 5510.02.001
      type: room
      name: 5510.02.001 (MW 2001 Rudolf-Diesel-Hörsaal)
      subtext: "garching, MW"
      subtext_bold: 2001@5510
    - kind: location
      id: 5510.EG.001
      type: room
      name: 5510.EG.001 (Hörsaal)
      subtext: "garching, MW"
      subtext_bold: 0001@5510
    - kind: location
      id: 0504.02.418
      type: room
      name: "0504.02.418 (Seminarraum/\u0019Bibliothek\u0017)"
      subtext: "stammgelände, Z4"
      subtext_bold: 2418@0504
    - kind: location
      id: 0104.02.405
      type: room
      name: "0104.02.405 (Sem./Prüf./\u0019Bibliothek\u0017)"
      subtext: "stammgelände, N4"
      subtext_bold: N2405@0104
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
