server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-20.snap
---
source: server/src/search_executor/mod.rs
description: "H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
expression: actual
info: "'H.0003' should get '2910.EG.003' in 1 results # H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
---
- facet: buildings
  entries:
    - kind: location
      id: "2910"
      type: building
      name: "Richard-Wagner-Str. 1 / Haus B + Haus \u0019H\u0017, Hochschule für Politik (HfP)/ Department of Governance (GOV)"
      subtext: Gebäude
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries:
    - kind: location
      id: 2910.01.101
      type: room
      name: 2910.01.101 (Gruppenarbeitsraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.101@2910
    - kind: location
      id: 2910.01.102
      type: room
      name: 2910.01.102 (Gruppenarbeitsraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.102@2910
    - kind: location
      id: 2910.02.202
      type: room
      name: 2910.02.202 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.202@2910
    - kind: location
      id: 2910.02.204
      type: room
      name: 2910.02.204 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.204@2910
    - kind: location
      id: 2910.02.206
      type: room
      name: 2910.02.206 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.206@2910
    - kind: location
      id: 2910.EG.001
      type: room
      name: 2910.EG.001 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.001@2910
    - kind: location
      id: 2910.EG.002
      type: room
      name: 2910.EG.002 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.002@2910
    - kind: location
      id: 2910.EG.003
      type: room
      name: 2910.EG.003 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.003@2910
    - kind: location
      id: 5212.01.028
      type: room
      name: 5212.01.028 (Gemeinschaftsraum)
      subtext: "garching, RCM-Hauptbau"
      subtext_bold: H.1.028@5212
  n_visible: 9
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
